Fix buttons on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,6 +123,13 @@ body {
   }
 }
 
+@media only screen and (max-width: 413px) {
+  .menuChips{
+    height: 65px;
+  }  
+}
+
+
 .screen {
   display: flex;
   flex-direction: column;
